--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -28,9 +28,9 @@
                 tools:context=".activities.CallActivity">
 
     <org.webrtc.SurfaceViewRenderer
+        android:id="@+id/full_screen_surface_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/full_screen_surface_view"/>
+        android:layout_height="match_parent"/>
 
     <LinearLayout
         android:id="@+id/remote_renderers_layout"
@@ -49,5 +49,50 @@
         android:layout_alignParentEnd="true"
         android:layout_margin="16dp"
         android:visibility="invisible"/>
+
+    <RelativeLayout
+        android:id="@+id/call_controls"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true">
+
+        <ImageButton
+            android:id="@+id/call_control_hangup"
+            android:layout_width="36dp"
+            android:layout_height="48dp"
+            android:layout_marginEnd="@dimen/margin_between_elements"
+            android:background="?android:selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_call_end_white_24px"
+            android:tint="@color/nc_darkRed"
+            android:tintMode="src_in"/>
+
+        <ImageButton
+            android:id="@+id/call_control_camera"
+            android:layout_width="36dp"
+            android:layout_height="48dp"
+            android:layout_marginEnd="@dimen/margin_between_elements"
+            android:layout_toEndOf="@id/call_control_hangup"
+            android:background="?android:selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_videocam_white_24px"/>
+
+        <ImageButton
+            android:id="@+id/call_control_microphone"
+            android:layout_width="24dp"
+            android:layout_height="48dp"
+            android:layout_marginEnd="@dimen/margin_between_elements"
+            android:layout_toEndOf="@id/call_control_camera"
+            android:background="?android:selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_mic_white_24px"/>
+
+        <ImageButton
+            android:id="@+id/call_control_switch_camera"
+            android:layout_width="36dp"
+            android:layout_height="48dp"
+            android:layout_toEndOf="@id/call_control_microphone"
+            android:background="?android:selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_switch_video_white_24px"/>
+
+    </RelativeLayout>
 
 </RelativeLayout>
