--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,13 +1,13 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
         android:width="108dp"
         android:height="108dp"
-        android:viewportWidth="35.555557"
-        android:viewportHeight="35.555557">
-    <group android:translateX="9.777778"
-            android:translateY="9.777778">
+        android:viewportWidth="1680"
+        android:viewportHeight="1680">
+    <group android:translateX="168"
+            android:translateY="168">
         <path
-            android:pathData="m7.999,0.999a6.999,6.999 0,0 0,-6.999 7,6.999 6.999,0 0,0 6.999,6.999 6.999,6.999 0,0 0,3.631 -1.024c0.86,0.342 2.787,1.356 3.246,0.918 0.479,-0.458 -0.563,-2.612 -0.812,-3.412a6.999,6.999 0,0 0,0.935 -3.481,6.999 6.999,0 0,0 -6.999,-6.999zM8,3.66a4.34,4.34 0,0 1,4.34 4.34,4.34 4.34,0 0,1 -4.34,4.34 4.34,4.34 0,0 1,-4.34 -4.34,4.34 4.34,0 0,1 4.34,-4.34z"
-            android:fillColor="#fff"
-            android:strokeWidth="0.14"/>
+            android:pathData="M672,347C493.7,347 347,493.7 347,672C347,672 347,672 347,672C347,850.2 493.7,996.9 672,996.9C731.4,996.8 789.7,980.3 840.5,949.4C880.5,965.2 969.9,1012.3 991.2,992C1013.5,970.7 965.1,870.7 953.5,833.6C981.8,784.4 996.8,728.7 996.9,672C996.9,493.7 850.2,347 672,347L672,347ZM672,470.5C782.5,470.5 873.5,561.5 873.5,672C873.5,782.6 782.5,873.5 672,873.5C561.5,873.5 470.5,782.6 470.5,672C470.5,672 470.5,672 470.5,672C470.5,561.5 561.5,470.5 672,470.5L672,470.5Z"
+            android:fillType="nonZero"
+            android:fillColor="#ffffff"/>
     </group>
 </vector>
