--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -21,20 +21,23 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/relative_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
                 tools:context=".activities.CallActivity">
 
-    <LinearLayout
+    <com.google.android.flexbox.FlexboxLayout
         android:id="@+id/remote_renderers_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:animateLayoutChanges="true"
         android:background="#000000"
-        android:orientation="vertical">
-    </LinearLayout>
+        android:visibility="invisible"
+        app:flexWrap="wrap"
+        app:alignItems="flex_end"
+        app:alignContent="flex_end"/>
 
     <org.webrtc.SurfaceViewRenderer
         android:id="@+id/pip_video_view"
