--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -27,18 +27,13 @@
                 android:fitsSystemWindows="true"
                 tools:context=".activities.CallActivity">
 
-    <org.webrtc.SurfaceViewRenderer
-        android:id="@+id/full_screen_surface_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
     <LinearLayout
         android:id="@+id/remote_renderers_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:animateLayoutChanges="true"
-        android:orientation="vertical"
-        android:visibility="invisible">
+        android:background="#000000"
+        android:orientation="vertical">
     </LinearLayout>
 
     <org.webrtc.SurfaceViewRenderer
@@ -91,7 +86,8 @@
             android:layout_height="48dp"
             android:layout_toEndOf="@id/call_control_microphone"
             android:background="?android:selectableItemBackgroundBorderless"
-            android:src="@drawable/ic_switch_video_white_24px"/>
+            android:src="@drawable/ic_switch_video_white_24px"
+            android:visibility="invisible"/>
 
     </RelativeLayout>
 
