--- a/app/src/main/res/layout/surface_renderer.xml
+++ b/app/src/main/res/layout/surface_renderer.xml
@@ -20,24 +20,25 @@
   -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/relative_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relative_layout"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="#000000"
+    android:padding="4dp">
 
     <org.webrtc.SurfaceViewRenderer
         android:id="@+id/surface_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_width="80dp"
+        android:layout_height="80dp"/>
 
     <ImageView
         android:id="@+id/remote_video_off"
         android:layout_width="16dp"
         android:layout_height="16dp"
-        android:layout_above="@id/peer_nick_text_view"
-        android:layout_marginStart="8dp"
+        android:layout_below="@+id/surface_view"
         android:layout_marginEnd="8dp"
+        android:layout_marginTop="4dp"
         android:src="@drawable/ic_videocam_off_white_24px"
         android:visibility="invisible"/>
 
@@ -45,7 +46,8 @@
         android:id="@+id/remote_audio_off"
         android:layout_width="16dp"
         android:layout_height="16dp"
-        android:layout_above="@id/peer_nick_text_view"
+        android:layout_below="@+id/surface_view"
+        android:layout_marginTop="4dp"
         android:layout_toEndOf="@id/remote_video_off"
         android:src="@drawable/ic_mic_off_white_24px"
         android:visibility="invisible"/>
@@ -54,11 +56,9 @@
         android:id="@+id/peer_nick_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="4dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="8dp"
-        android:textColor="@color/nc_white_color_complete"/>
+        android:layout_below="@id/remote_audio_off"
+        android:ellipsize="end"
+        android:textColor="@color/nc_white_color_complete"
+        tools:text="Test"/>
 
 </RelativeLayout>
