--- a/app/src/main/res/layout/rv_item_call.xml
+++ b/app/src/main/res/layout/rv_item_call.xml
@@ -27,17 +27,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/item_height">
 
-    <cn.carbs.android.avatarimageview.library.AvatarImageView
+    <ImageView
         android:id="@+id/avatar_image"
         android:layout_width="@dimen/avatar_size"
         android:layout_height="@dimen/avatar_size"
         android:layout_centerVertical="true"
         android:layout_marginEnd="@dimen/margin_between_elements"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:scaleType="centerInside"
-        app:aiv_CornerRadius="@dimen/avatar_corner_radius"
-        app:aiv_ShowBoarder="false"
-        app:aiv_TextSizeRatio="0.5"/>
+        android:layout_marginStart="@dimen/activity_horizontal_margin"/>
 
     <LinearLayout
         android:id="@+id/linear_layout"
@@ -58,7 +54,7 @@
             tools:text="Call item text"/>
 
         <TextView
-            android:id="@+id/timestamp_text"
+            android:id="@+id/secondary_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:singleLine="true"
