--- a/app/src/main/res/layout/rv_item_contact.xml
+++ b/app/src/main/res/layout/rv_item_contact.xml
@@ -28,17 +28,13 @@
                 android:layout_height="@dimen/item_height"
                 android:orientation="vertical">
 
-    <cn.carbs.android.avatarimageview.library.AvatarImageView
+    <ImageView
         android:id="@+id/avatar_image"
         android:layout_width="@dimen/avatar_size"
         android:layout_height="@dimen/avatar_size"
         android:layout_centerVertical="true"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:scaleType="centerInside"
-        app:aiv_CornerRadius="@dimen/avatar_corner_radius"
-        app:aiv_ShowBoarder="false"
-        app:aiv_TextSizeRatio="0.5"/>
+        android:layout_marginStart="@dimen/activity_horizontal_margin"/>
 
     <TextView
         android:id="@+id/name_text"
