Preparation for account import
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/layout/controller_server_selection.xml
+++ b/app/src/main/res/layout/controller_server_selection.xml
@@ -80,7 +80,7 @@
         android:visibility="invisible"/>
 
     <TextView
-        android:id="@+id/providers_text_view"
+        android:id="@+id/helper_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/progress_bar"
