--- a/app/src/main/res/layout/controller_account_verification.xml
+++ b/app/src/main/res/layout/controller_account_verification.xml
@@ -35,8 +35,8 @@
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:indeterminate="true"
-        android:indeterminateTintMode="src_in"
-        android:progressTint="@color/colorPrimary"/>
+        android:indeterminateTint="@color/colorPrimary"
+        android:indeterminateTintMode="src_in"/>
 
     <TextView
         android:id="@+id/progress_text"
