--- a/app/src/main/res/layout/controller_server_selection.xml
+++ b/app/src/main/res/layout/controller_server_selection.xml
@@ -42,8 +42,6 @@
         android:layout_height="96dp"
         android:layout_below="@id/image_logo"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         app:errorColor="@color/nc_white_color_complete"
         app:helperText=" "
@@ -70,8 +68,6 @@
         android:layout_below="@id/text_field_boxes"
         android:layout_centerHorizontal="true"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginTop="24dp"
         android:indeterminate="true"
@@ -89,6 +85,8 @@
         android:lines="2"
         android:text="@string/nc_get_from_provider"
         android:textAlignment="center"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:textAllCaps="true"
         android:textColor="@color/nc_light_blue_color"/>
 
