--- a/app/src/main/res/layout/controller_account_verification.xml
+++ b/app/src/main/res/layout/controller_account_verification.xml
@@ -23,7 +23,8 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/nc_white_color">
+                android:background="@color/nc_white_color"
+                android:keepScreenOn="true">
 
     <ProgressBar
         android:id="@+id/progress_bar"
