--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -40,8 +40,8 @@
         android:id="@+id/pip_video_view"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
         android:layout_margin="16dp"
         android:visibility="invisible"/>
 
@@ -49,42 +49,45 @@
         android:id="@+id/call_controls"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true">
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp">
 
         <ImageButton
             android:id="@+id/call_control_hangup"
-            android:layout_width="36dp"
-            android:layout_height="48dp"
-            android:layout_marginEnd="@dimen/margin_between_elements"
+            android:layout_width="44dp"
+            android:layout_height="56dp"
+            android:layout_marginEnd="16dp"
             android:background="?android:selectableItemBackgroundBorderless"
             android:src="@drawable/ic_call_end_white_24px"
             android:tint="@color/nc_darkRed"
             android:tintMode="src_in"/>
 
         <ImageButton
-            android:id="@+id/call_control_camera"
-            android:layout_width="36dp"
-            android:layout_height="48dp"
+            android:id="@+id/call_control_microphone"
+            android:layout_width="32dp"
+            android:layout_height="56dp"
             android:layout_marginEnd="@dimen/margin_between_elements"
             android:layout_toEndOf="@id/call_control_hangup"
-            android:background="?android:selectableItemBackgroundBorderless"
-            android:src="@drawable/ic_videocam_off_white_24px"/>
-
-        <ImageButton
-            android:id="@+id/call_control_microphone"
-            android:layout_width="24dp"
-            android:layout_height="48dp"
-            android:layout_marginEnd="@dimen/margin_between_elements"
-            android:layout_toEndOf="@id/call_control_camera"
+            android:alpha="0.7"
             android:background="?android:selectableItemBackgroundBorderless"
             android:src="@drawable/ic_mic_off_white_24px"/>
 
         <ImageButton
-            android:id="@+id/call_control_switch_camera"
-            android:layout_width="36dp"
-            android:layout_height="48dp"
+            android:id="@+id/call_control_camera"
+            android:layout_width="44dp"
+            android:layout_height="56dp"
+            android:layout_marginEnd="@dimen/margin_between_elements"
             android:layout_toEndOf="@id/call_control_microphone"
+            android:alpha="0.7"
+            android:background="?android:selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_videocam_off_white_24px"/>
+
+        <ImageButton
+            android:id="@+id/call_control_switch_camera"
+            android:layout_width="44dp"
+            android:layout_height="56dp"
+            android:layout_toEndOf="@id/call_control_camera"
             android:background="?android:selectableItemBackgroundBorderless"
             android:src="@drawable/ic_switch_video_white_24px"
             android:visibility="invisible"/>
