Better UI for operations
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/layout/controller_operations_menu.xml
+++ b/app/src/main/res/layout/controller_operations_menu.xml
@@ -28,8 +28,9 @@
         android:id="@+id/progress_bar"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_centerHorizontal="true"
+        android:layout_centerInParent="true"
         android:layout_marginTop="24dp"
+        android:layout_marginBottom="24dp"
         android:indeterminate="true"
         android:indeterminateTint="@color/colorPrimary"
         android:indeterminateTintMode="src_in"
@@ -39,8 +40,8 @@
         android:id="@+id/result_image_view"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="12dp"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
@@ -55,6 +56,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
+        android:layout_marginBottom="12dp"
         android:maxLines="2"
         android:textAlignment="center"
         android:textColor="@color/colorPrimary"
@@ -68,7 +70,6 @@
         android:layout_below="@id/result_text_view"
         android:layout_marginBottom="12dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
         android:background="#0000"
         android:text="@string/nc_ok"
         android:textColor="@color/colorPrimary"
