--- a/app/src/main/res/layout/controller_operations_menu.xml
+++ b/app/src/main/res/layout/controller_operations_menu.xml
@@ -29,8 +29,8 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_centerInParent="true"
-        android:layout_marginTop="24dp"
         android:layout_marginBottom="24dp"
+        android:layout_marginTop="24dp"
         android:indeterminate="true"
         android:indeterminateTint="@color/colorPrimary"
         android:indeterminateTintMode="src_in"
@@ -40,7 +40,7 @@
         android:id="@+id/result_image_view"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
@@ -54,9 +54,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/result_image_view"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="12dp"
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
-        android:layout_marginBottom="12dp"
         android:maxLines="2"
         android:textAlignment="center"
         android:textColor="@color/colorPrimary"
