--- a/app/src/main/res/layout/rv_item_app.xml
+++ b/app/src/main/res/layout/rv_item_app.xml
@@ -20,18 +20,31 @@
   -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
-                android:orientation="vertical">
+                android:layout_marginTop="16dp"
+                android:background="@color/nc_white_color"
+                android:orientation="horizontal">
+
+    <ImageView
+        android:id="@+id/icon_image_view"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="16dp"/>
 
     <TextView
-        android:id="@+id/menu_text"
-        android:layout_width="match_parent"
+        android:id="@+id/app_title_text_view"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:textSize="12sp"/>
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@id/icon_image_view"
+        android:textAlignment="center"
+        android:textSize="12sp"
+        tools:text="App title"/>
 
 </RelativeLayout>
