--- a/app/src/main/res/layout/rv_item_app.xml
+++ b/app/src/main/res/layout/rv_item_app.xml
@@ -25,24 +25,27 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:layout_marginTop="16dp"
-                android:background="@color/nc_white_color"
-                android:orientation="horizontal">
+                android:background="@color/nc_white_color">
 
     <ImageView
         android:id="@+id/icon_image_view"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_centerVertical="true"
-        android:layout_marginStart="16dp"/>
+        android:layout_marginStart="16dp"
+        android:focusable="false"
+        android:focusableInTouchMode="false"/>
 
     <TextView
         android:id="@+id/app_title_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_centerVertical="true"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:layout_toEndOf="@id/icon_image_view"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:textAlignment="center"
         android:textSize="12sp"
         tools:text="App title"/>
