--- a/app/src/main/res/layout/rv_item_call.xml
+++ b/app/src/main/res/layout/rv_item_call.xml
@@ -26,20 +26,38 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/item_height">
 
-    <ImageView
-        android:id="@+id/avatar_image"
-        android:layout_width="@dimen/avatar_size"
-        android:layout_height="@dimen/avatar_size"
+
+    <FrameLayout
+        android:id="@+id/frame_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="@dimen/margin_between_elements"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"/>
+        android:layout_marginStart="@dimen/activity_horizontal_margin">
+
+        <ImageView
+            android:id="@+id/avatar_image"
+            android:layout_width="@dimen/avatar_size"
+            android:layout_height="@dimen/avatar_size"/>
+
+        <ImageView
+            android:id="@+id/password_protected_image_view"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="bottom|end"
+            android:src="@drawable/ic_vpn_key_black_24dp"
+            android:tint="@color/nc_material_yellow"
+            android:tintMode="src_in"
+            android:visibility="visible"/>
+
+    </FrameLayout>
 
     <LinearLayout
         android:id="@+id/linear_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_toEndOf="@id/avatar_image"
+        android:layout_marginStart="@dimen/margin_between_elements"
+        android:layout_toEndOf="@id/frame_layout"
         android:layout_toStartOf="@+id/more_menu"
         android:orientation="vertical">
 
