--- a/app/src/main/res/layout/rv_item_empty_footer.xml
+++ b/app/src/main/res/layout/rv_item_empty_footer.xml
@@ -3,7 +3,7 @@
   ~ Nextcloud Talk application
   ~
   ~ @author Mario Danic
-  ~ Copyright (C) 2017 Mario Danic
+  ~ Copyright (C) 2017-2018 Mario Danic <mario@lovelyhq.com>
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -19,15 +19,9 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="32dp"
+              android:orientation="vertical">
 
-	<!-- Search, should appear as action button -->
-	<item android:id="@+id/action_search"
-	      android:title="@string/nc_search"
-	      android:icon="@drawable/ic_search_white_24dp"
-	      app:showAsAction="collapseActionView|always"
-	      android:animateLayoutChanges="true"
-	      app:actionViewClass="android.support.v7.widget.SearchView"/>
-
-</menu>
+</LinearLayout>
