--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -45,14 +45,16 @@
         android:layout_margin="16dp"
         android:visibility="invisible"/>
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/call_controls"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
-        android:animateLayoutChanges="true">
+        android:animateLayoutChanges="true"
+        android:background="@android:color/transparent"
+        android:gravity="center">
 
         <com.nextcloud.talk.utils.MagicFlipView
             xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -72,7 +74,6 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginEnd="20dp"
-            android:layout_toEndOf="@id/call_control_camera"
             app:alpha="0.7"
             app:checked="false"
             app:enableInitialAnimation="false"
@@ -85,7 +86,6 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginEnd="20dp"
-            android:layout_toEndOf="@id/call_control_switch_camera"
             app:alpha="0.7"
             app:checked="false"
             app:enableInitialAnimation="false"
@@ -97,12 +97,11 @@
             android:id="@+id/call_control_hangup"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_toEndOf="@+id/call_control_microphone"
             app:checked="false"
             app:enableInitialAnimation="false"
             app:frontBackgroundColor="@color/nc_darkRed"
             app:frontImage="@drawable/ic_call_end_white_24px"/>
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </RelativeLayout>
