--- a/app/src/main/res/values/setup.xml
+++ b/app/src/main/res/values/setup.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Set before a release -->
-    <string name="nc_talk_database_encryption_key" translatable="false">mario</string>
+    <string name="nc_talk_database_encryption_key" translatable="false">HvAfHtAy/QdFYqAWFFXa1VV_Iv6ZQ1.tf5swMc^45wS_vz=Wm[oyRP5D-</string>
     <string name="nc_talk_login_scheme" translatable="false">nc</string>
 
     <string name="nc_app_name">Nextcloud Talk</string>
