--- a/app/src/main/res/layout/rv_item_menu.xml
+++ b/app/src/main/res/layout/rv_item_menu.xml
@@ -22,15 +22,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:layout_marginTop="16dp">
+    >
 
     <TextView
         android:id="@+id/menu_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_margin="16dp"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:textSize="12sp"/>
