--- a/app/src/main/res/layout/controller_bottom_navigation.xml
+++ b/app/src/main/res/layout/controller_bottom_navigation.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/bottom_navigation_root"
@@ -10,9 +10,8 @@
     <com.bluelinelabs.conductor.ChangeHandlerFrameLayout
         android:id="@+id/bottom_navigation_controller_container"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_gravity="top"
-        android:layout_weight="1"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
     <android.support.design.widget.BottomNavigationView
@@ -22,4 +21,4 @@
         android:layout_gravity="bottom"
         android:animateLayoutChanges="true"
         android:background="?android:attr/windowBackground"/>
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
